k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: bookshelf-web
  namespace: bookshelf

spec:
  selector:
    app: bookshelf-web

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
