k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: bookshelf-ingress
  namespace: bookshelf
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2


spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bookshelf-api
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookshelf-web
                port:
                  number: 80
